--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 black==23.3.0
 click==8.1.3
+dj-rest-auth==3.0.0
 Django==4.2
 django-cors-headers==3.14.0
 djangorestframework==3.14.0
